# prism

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  website.md
configs/: example_classification.yaml  example_regression.yaml
notes/: 2024-07-20.md  2024-07-22.md  2024-07-24.md  2024-07-27.md  2024-07-29.md  2024-07-31.md  2024-08-01.md  2024-08-03.md  2024-08-05.md  2024-08-08.md  2024-08-10.md  2024-08-12.md  2024-08-14.md  2024-08-17.md  2024-08-19.md  2024-08-21.md  2024-08-24.md  2024-08-26.md  2024-08-28.md  2024-08-31.md  2024-09-05.md  2024-09-08.md  2024-09-10.md  2024-09-12.md  2024-09-14.md  2024-09-17.md  2024-09-19.md  2024-09-21.md  2024-09-24.md  2024-09-26.md  2024-09-28.md  2024-10-02.md  2024-10-05.md  2024-10-07.md  2024-10-09.md  2024-10-12.md  2024-10-14.md  2024-10-16.md  2024-10-19.md  2024-10-21.md  (+4 more)
prism/: __init__.py  config.py
prism/api/: app.py  models.py  routes.py
prism/cli/: __init__.py  evaluate.py  serve.py  train.py
prism/data/: loader.py  preprocessor.py  validator.py
prism/evaluation/: evaluator.py  metrics.py
prism/experiments/: runner.py  tracker.py
prism/features/: engineer.py  pipeline.py  selector.py
prism/models/: base.py  classifiers.py  registry.py  regressors.py  trainer.py
prism/pipeline/: builder.py  steps.py
prism/utils/: io.py  logger.py
tests/: conftest.py  test_api.py  test_classifiers.py  test_evaluator.py  test_loader.py  test_preprocessor.py  test_tracker.py  test_trainer.py
